@@ -23648,21 +23648,27 @@
       <_name>Agrinio</_name>
       <code>LGAG</code>
     </location>
-    <location>
-      <_name>Aktion</_name>
-      <code>LGPZ</code>
-      <coordinates>38-37N 020-46E</coordinates>
-    </location>
+    <city>
+      <_name>Preveza</_name>
+      <location>
+        <_name>Aktion</_name>
+        <code>LGPZ</code>
+        <coordinates>38-37N 020-46E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Alexandroupoli</_name>
       <code>LGAL</code>
       <coordinates>40-51N 025-55E</coordinates>
     </location>
-    <location>
-      <_name>Anchialos</_name>
-      <code>LGBL</code>
-      <coordinates>39-13N 022-48E</coordinates>
-    </location>
+    <city>
+      <_name>Volos</_name>
+      <location>
+        <_name>Anchialos</_name>
+        <code>LGBL</code>
+        <coordinates>39-13N 022-48E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Andravida</_name>
       <code>LGAD</code>
@@ -23673,37 +23679,42 @@
       <code>LGRX</code>
       <coordinates>38-09N 021-25E</coordinates>
     </location>
-    <location>
+    <city>
       <_name>Athens</_name>
-      <code>LGAV</code>
-      <coordinates>37-56N 023-56E</coordinates>
-    </location>
-    <location>
-      <_name>Athinai</_name>
-      <code>LGAT</code>
-      <coordinates>37-54N 023-44E</coordinates>
-    </location>
-    <location>
-      <_name>Chania</_name>
-      <code>LGSA</code>
-    </location>
+      <location>
+        <_name>Eleftherios Venizelos</_name>
+        <code>LGAV</code>
+        <coordinates>37-56N 023-56E</coordinates>
+      </location>
+      <location>
+        <_name>Elliniko</_name>
+        <code>LGAT</code>
+        <coordinates>37-54N 023-44E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Chios</_name>
       <code>LGHI</code>
       <coordinates>38-20N 026-08E</coordinates>
     </location>
-    <location>
-      <_name>Chrysoupoli</_name>
-      <code>LGKV</code>
-      <coordinates>40-59N 024-36E</coordinates>
-    </location>
-    <location>
+    <city>
+      <_name>Kavala</_name>
+      <location>
+        <_name>Chrysoupoli</_name>
+        <code>LGKV</code>
+        <coordinates>40-59N 024-36E</coordinates>
+      </location>
+    </city>
+    <city>
       <_name>Cyclades Islands</_name>
-      <code>LGNX</code>
-      <coordinates>37-04-47N 025-22-01E</coordinates>
-    </location>
+      <location>
+        <_name>Naxos</_name>
+        <code>LGNX</code>
+        <coordinates>37-04-47N 025-22-01E</coordinates>
+      </location>
+    </city>
     <location>
-      <_name>Elefsis</_name>
+      <_name>Elefsina</_name>
       <code>LGEL</code>
       <coordinates>38-04N 023-33E</coordinates>
     </location>
@@ -23711,10 +23722,6 @@
       <_name>Heraklion</_name>
       <code>LGIR</code>
       <coordinates>35-20N 025-11E</coordinates>
-    </location>
-    <location>
-      <_name>Iraklion</_name>
-      <code>LGIR</code>
     </location>
     <location>
       <_name>Kalamata</_name>
@@ -23730,10 +23737,6 @@
       <_name>Kastoria</_name>
       <code>LGKA</code>
       <coordinates>40-27N 021-17E</coordinates>
-    </location>
-    <location>
-      <_name>Kavala</_name>
-      <code>LGKV</code>
     </location>
     <location>
       <_name>Kefalhnia</_name>
@@ -23771,36 +23774,35 @@
       <coordinates>39-55N 025-14E</coordinates>
     </location>
     <location>
-      <_name>Mikonos Island</_name>
+      <_name>Mikonos</_name>
       <code>LGMK</code>
       <coordinates>37-26-09N 025-20-45E</coordinates>
     </location>
-    <location>
-      <_name>Mytilini</_name>
-      <code>LGMT</code>
-      <coordinates>39-04N 026-36E</coordinates>
-    </location>
+    <city>
+      <_name>Lesvos</_name>
+      <location>
+        <_name>Mytilene</_name>
+        <code>LGMT</code>
+        <coordinates>39-04N 026-36E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Paros</_name>
       <code>LGPA</code>
       <coordinates>37-00-40N 025-07-32E</coordinates>
     </location>
-    <location>
-      <_name>Preveza</_name>
-      <code>LGPZ</code>
-    </location>
     <city>
-     <_name>Rhodes</_name>
-     <location>
-       <_name>Maritsa</_name>
-       <code>LGRD</code>
-       <coordinates>36-23N 028-07E</coordinates>
-     </location>
-     <location>
-       <_name>Rhodes</_name>
-       <code>LGRP</code>
-       <coordinates>36-24N 028-05E</coordinates>
-     </location>
+      <_name>Rhodes</_name>
+      <location>
+        <_name>Maritsa</_name>
+        <code>LGRD</code>
+        <coordinates>36-23N 028-07E</coordinates>
+      </location>
+      <location>
+        <_name>Rhodes</_name>
+        <code>LGRP</code>
+        <coordinates>36-24N 028-05E</coordinates>
+      </location>
     </city>
     <location>
       <_name>Samos</_name>
@@ -23808,7 +23810,7 @@
       <coordinates>37-42N 026-55E</coordinates>
     </location>
     <location>
-      <_name>Santorini Island</_name>
+      <_name>Santorini</_name>
       <code>LGSR</code>
       <coordinates>36-24N 025-29E</coordinates>
     </location>
@@ -23821,33 +23823,50 @@
       <_name>Skiros</_name>
       <code>LGSY</code>
     </location>
-    <location>
-      <_name>Souda</_name>
-      <code>LGSA</code>
-      <coordinates>35-29N 024-07E</coordinates>
-    </location>
+    <city>
+      <_name>Chania</_name>
+      <location>
+        <_name>Souda</_name>
+        <code>LGSA</code>
+        <coordinates>35-29N 024-07E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Syros</_name>
       <code>LGSO</code>
       <coordinates>37-25-16N 024-56-54E</coordinates>
     </location>
-    <location>
-      <_name>Tanagra</_name>
-      <code>LGTG</code>
-      <coordinates>38-19N 023-32E</coordinates>
-    </location>
+    <city>
+      <_name>Thiva</_name>
+      <location>
+        <_name>Tanagra</_name>
+        <code>LGTG</code>
+        <coordinates>38-19N 023-32E</coordinates>
+      </location>
+    </city>
+    <city>
+      <_name>Chalkida</_name>
+      <location>
+        <_name>Tanagra</_name>
+        <code>LGTG</code>
+        <coordinates>38-19N 023-32E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Tatoi</_name>
       <code>LGTT</code>
       <coordinates>38-06N 023-47E</coordinates>
     </location>
-    <location>
+    <city>
       <_name>Thessaloniki</_name>
-      <code>LGTS</code>
-      <coordinates>40-31N 022-58E</coordinates>
-    </location>
+      <location>
+        <_name>Makedonia</_name>
+        <code>LGTS</code>
+        <coordinates>40-31N 022-58E</coordinates>
+      </location>
+    </city>
     <location>
-      <_name>Tripolis</_name>
+      <_name>Tripoli</_name>
       <code>LGTP</code>
       <coordinates>37-32N 022-24E</coordinates>
     </location>
