@@ -1,3 +1,8 @@
+2004-12-11  Simos Xenitellis  <simos@gnome.org>
+
+	* Locations.xml.in: Updated entries related to Greece.
+	Assigned remote airports to near-by cities.
+
 2004-12-09  Frank Solensky  <frank@solensky.org>
 
 	reviewed by: Davyd Madeley <davyd@madeley.id.au>
